--- a/ClaimReserving.csproj
+++ b/ClaimReserving.csproj
@@ -33,8 +33,19 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Castle.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>packages\Castle.Core.4.2.0\lib\net45\Castle.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Castle.Windsor, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>packages\Castle.Windsor.4.1.0\lib\net45\Castle.Windsor.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Remoting" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,6 +54,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApplicationIocInstaller.cs" />
     <Compile Include="Infrastructure\Persistant\Session\IPersistantSession.cs" />
     <Compile Include="Infrastructure\Persistant\Session\TextFilePeresistantSession.cs" />
     <Compile Include="Infrastructure\Persistant\Session\Models\CumulativeClaimData.cs" />
@@ -56,10 +68,13 @@
     <Compile Include="Repository\IPaymentRepository.cs" />
     <Compile Include="Repository\PaymentRepository.cs" />
     <Compile Include="Services\CumlativeClaimService.cs" />
+    <Compile Include="Services\ICumlativeClaimService.cs" />
+    <Compile Include="Services\IPaymentService.cs" />
     <Compile Include="Services\PaymentService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
