--- a/ClaimReserving.csproj
+++ b/ClaimReserving.csproj
@@ -57,8 +57,8 @@
     <Compile Include="ApplicationIocInstaller.cs" />
     <Compile Include="Infrastructure\Persistant\Session\IPersistantSession.cs" />
     <Compile Include="Infrastructure\Persistant\Session\TextFilePeresistantSession.cs" />
-    <Compile Include="Infrastructure\Persistant\Session\Models\CumulativeClaimData.cs" />
-    <Compile Include="Infrastructure\Persistant\Session\Models\Payment.cs" />
+    <Compile Include="Models\CumulativeClaimData.cs" />
+    <Compile Include="Models\Payment.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\CumlativeClaimDataRepository.cs" />
